# security-checker

./: .gitignore  .gitleaks.toml  CLAUDE.md  PROGRESS.md  README.md  pyproject.toml
docs/measurements/: 2026-06-27-b1-pack-audit.md  2026-06-27-m1-reachability-fp.md  2026-06-28-gap-map.md  2026-06-28-opengrep-poc.md
fixtures/custom-rule-app/: Creds.java  Hashing.java  LoadtestSeeder.java
fixtures/sast-app/: expected.json  pom.xml
fixtures/secret-app/: expected.json
fixtures/vuln-maven-app/: expected.json  pom.xml
secscan/: __init__.py  __main__.py  cli.py  compliance.py  detect.py  doctor.py  exclude.py  measure.py  models.py  orchestrator.py  profiles.py  sbom.py  scan.py
secscan/adapters/: __init__.py  base.py  bom_sca.py  gitleaks.py  osv.py  semgrep.py  spotbugs.py  trivy.py
secscan/normalize/: __init__.py  gitleaks.py  merge.py  osv.py  semgrep.py  spotbugs.py  trivy.py
secscan/output/: __init__.py  markdown.py  sarif.py
secscan/reachability/: __init__.py  depscan.py  engine.py
secscan/rules/: hardcoded-credential.yml  mybatis-sqli-identifier.yml  mybatis-sqli-value.yml  zero-salt.yml
tests/: test_adapters.py  test_bom_sca.py  test_cli.py  test_compliance.py  test_custom_rules.py  test_deep.py  test_detect.py  test_doctor.py  test_exclude.py  test_gate_m1.py  test_gate_m2.py  test_gate_m3.py  test_gate_m4.py  test_gate_m5.py  test_measure.py  test_normalize.py  test_orchestrator.py  test_output.py  test_reachability.py  test_reachability_depscan.py  test_sast.py  test_scan.py  test_secret.py  test_secret_verify.py  test_suppress.py
(+24 files in other folders)
