[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "secscan"
version = "0.0.1"
description = "JVM(Java/Kotlin) hybrid security scanner — orchestrates OSS scanners, normalizes to a typed finding model, prunes noise via reachability"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
secscan = "secscan.cli:main"

[tool.setuptools.packages.find]
include = ["secscan*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
